# mondrian

./: Cargo.toml
models/: Cargo.toml
models/migrations/2019-01-06-160403_create_users/: up.sql
models/migrations/2019-07-20-134143_create_tasks/: down.sql  up.sql
models/migrations/2019-07-20-193646_create_task_assginments/: down.sql  up.sql
models/src/: lib.rs  schema.rs
models/src/tasks/: mod.rs
models/src/users/: mod.rs
models/src/utils/: crypto.rs
web-server/: Cargo.toml
web-server/src/: main.rs
web-server/src/apps/: api.rs  mod.rs
web-server/src/apps/api/extractors/: user.rs
web-server/src/apps/api/handlers/: mod.rs
web-server/src/apps/api/handlers/user/: auth.rs  get_user.rs  mod.rs  register.rs
web-server/src/apps/api/handlers/users/: auth.rs  register.rs
web-server/src/apps/api/routes/: auth.rs  mod.rs  register.rs
web-server/src/apps/api/serializers/: mod.rs  user.rs
web-server/src/db/: mod.rs
web-server/src/errors/: mod.rs
