[package]
name = "models"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2018"

[dependencies]
rust-argon2 = "0.4"

chrono = { version = "0.4", features = ["serde"] }

diesel = { version = "1.3", features = ["postgres", "uuid", "r2d2", "chrono"] }

lazy_static = "1.2"

serde = "1"
serde_derive = "1"
