[package]
name = "mondrian-models"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2018"

[dependencies]
rust-argon2 = "0.5"

chrono = { version = "0.4", features = ["serde"] }

diesel = { version = "1.4", features = ["postgres", "uuid", "r2d2", "chrono"] }

lazy_static = "1.3"

serde = { version = "1", features = ["derive"] }
