[package]
name = "mondrian-web-server"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1"
actix-identity = "0.1"
actix-http = "0.2"

chrono = "0.4"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.14"
env_logger = "0.6"
failure = "0.1.5"
futures = "0.1"
jsonwebtoken = "6.0"
lazy_static = "1.3"
r2d2 = "0.8"
rust-argon2 = "0.4"

serde = "1"
serde_derive = "1"

# inner deps
models = { path = "../models" }
