[package]
name = "mondrian-web-server"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1"
actix-web = "2"
actix-identity = "0.2"
actix-http = "1"

chrono = "0.4"
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.7"
failure = "0.1.6"
futures = "0.3"
jsonwebtoken = { git = "https://github.com/Keats/jsonwebtoken", branch = "next" }
lazy_static = "1.4"
r2d2 = "0.8"
rust-argon2 = "0.6"

serde = { version = "1", features = ["derive"] }

# inner deps
mondrian-models = { path = "../models" }
